--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RollForward>LatestMinor</RollForward>
         <AssemblyName>ClearMeasure.Bootcamp.$(MSBuildProjectName)</AssemblyName>
         <RootNamespace>ClearMeasure.Bootcamp.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
         <Configurations>Debug;Release;exclude-maui.slnf</Configurations>
