Remove -Quality preview to enable automatic RTM adoption
- Removed -Quality preview parameter from all 4 .NET installation locations
- Build stage: SDK installation (line ~49)
- TDD stage: Runtime installation (line ~170)
- UAT stage: Runtime installation (line ~340)
- PROD stage: Runtime installation (line ~440)

Behavior change:
- Before: Always installs preview/RC builds
- After: Installs preview before RTM, automatically switches to RTM when available

Benefits:
- No pipeline changes needed when .NET 10 RTM releases
- Automatic upgrade to stable version
- Self-maintaining pipeline

Compatibility:
- Works now: Installs latest preview (10.0.0-rc.2.x)
- Works after RTM: Automatically installs RTM (10.0.0)

--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -17,17 +17,12 @@ stages:
           vmImage: "windows-latest"
         steps:
           # Dependencies
-          - task: UseDotNet@2
-            displayName: "Install SDK 10.0.100"
-            inputs:
-              packageType: "sdk"
-              version: "10.0.100"
-              includePreviewVersions: true
-          - task: UseDotNet@2
-            displayName: "Install Runtime 6.0.0"
-            inputs:
-              packageType: "runtime"
-              version: "6.0.0"
+#          - task: UseDotNet@2
+#            displayName: "Install SDK 10.0.100"
+#            inputs:
+#              packageType: "sdk"
+#              version: "10.0.100"
+#              includePreviewVersions: true
           # Manual .NET 10 SDK Installation (fallback)
           - task: PowerShell@2
             displayName: "Install .NET 10 SDK Manually"
@@ -51,7 +46,7 @@ stages:
                 try {
                   Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "$env:TEMP\dotnet-install.ps1"
                   Write-Host "Installing .NET 10 SDK..."
-                  & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Quality preview -InstallDir "$env:ProgramFiles\dotnet" -NoPath
+                  & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -InstallDir "$env:ProgramFiles\dotnet" -NoPath
                   
                   Write-Host "? SDK installation completed"
                   Write-Host "Available SDKs:"
@@ -62,6 +57,11 @@ stages:
                   Write-Host "Attempting to continue with existing SDKs..."
                   dotnet --list-sdks
                 }
+          - task: UseDotNet@2
+            displayName: "Install Runtime 6.0.0"
+            inputs:
+              packageType: "runtime"
+              version: "6.0.0"
           # Set environment variables
           - task: PowerShell@2
             displayName: "Set Version Environment Variable"
@@ -166,7 +166,7 @@ stages:
                       try {
                         Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "$env:TEMP\dotnet-install.ps1"
                         Write-Host "Installing .NET 10 runtime..."
-                        & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Quality preview -Runtime dotnet -InstallDir "$env:ProgramFiles\dotnet" -NoPath
+                        & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Runtime dotnet -InstallDir "$env:ProgramFiles\dotnet" -NoPath
                         
                         Write-Host "? Runtime installation completed"
                         Write-Host "Available runtimes:"
@@ -306,7 +306,7 @@ stages:
                       try {
                         Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "$env:TEMP\dotnet-install.ps1"
                         Write-Host "Installing .NET 10 runtime..."
-                        & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Quality preview -Runtime dotnet -InstallDir "$env:ProgramFiles\dotnet" -NoPath
+                        & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Runtime dotnet -InstallDir "$env:ProgramFiles\dotnet" -NoPath
                         
                         Write-Host "? Runtime installation completed"
                         Write-Host "Available runtimes:"
@@ -376,7 +376,7 @@ stages:
                       try {
                         Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "$env:TEMP\dotnet-install.ps1"
                         Write-Host "Installing .NET 10 runtime..."
-                        & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Quality preview -Runtime dotnet -InstallDir "$env:ProgramFiles\dotnet" -NoPath
+                        & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Runtime dotnet -InstallDir "$env:ProgramFiles\dotnet" -NoPath
                         
                         Write-Host "? Runtime installation completed"
                         Write-Host "Available runtimes:"
