Fix: Add ASP.NET Core 10 runtime installation for Acceptance Tests
- Updated TDD stage to install both .NET Core and ASP.NET Core runtimes
- ASP.NET Core runtime required for Blazor acceptance tests
- Checks if each runtime is installed before attempting installation
- Better logging with success/failure indicators

Problem:
- VSTest was failing with 'Microsoft.AspNetCore.App version 10.0.0 not found'
- Acceptance tests run Blazor application which requires ASP.NET Core runtime
- Previous implementation only installed Microsoft.NETCore.App runtime

Solution:
- Install Microsoft.NETCore.App 10.0 (for Database.dll - console app)
- Install Microsoft.AspNetCore.App 10.0 (for acceptance tests - Blazor app)
- Separate checks and error handling for each runtime

Resolves: VSTest acceptance test failures in TDD deployment stage

--- a/src/pure-azdo-pipeline.yml
+++ b/src/pure-azdo-pipeline.yml
@@ -137,9 +137,9 @@ stages:
           runOnce:
             deploy:
               steps:
-                # Install .NET 10 Runtime for Database migrations
+                # Install .NET 10 Runtimes for Database migrations and Acceptance Tests
                 - task: PowerShell@2
-                  displayName: "Install .NET 10 Runtime"
+                  displayName: "Install .NET 10 Runtimes"
                   inputs:
                     pwsh: true
                     targetType: "inline"
@@ -147,28 +147,40 @@ stages:
                       Write-Host "Checking current .NET runtimes..."
                       dotnet --list-runtimes
                       
-                      # Check if .NET 10 runtime is already available
-                      $runtimes = dotnet --list-runtimes
-                      if ($runtimes -match "Microsoft.NETCore.App 10\.0\.") {
-                        Write-Host "? .NET 10 runtime is already installed"
-                        exit 0
+                      # Download installer script
+                      Write-Host "Downloading .NET 10 runtime installer script..."
+                      Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "$env:TEMP\dotnet-install.ps1"
+                      
+                      # Install .NET 10 Core Runtime (for Database.dll)
+                      $coreInstalled = (dotnet --list-runtimes) -match "Microsoft.NETCore.App 10\.0\."
+                      if (-not $coreInstalled) {
+                        try {
+                          Write-Host "Installing .NET 10 Core runtime..."
+                          & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Runtime dotnet -InstallDir "$env:ProgramFiles\dotnet" -NoPath
+                          Write-Host "? Core runtime installation completed"
+                        } catch {
+                          Write-Warning "? Could not install Core runtime: $_"
+                        }
+                      } else {
+                        Write-Host "? .NET 10 Core runtime already installed"
                       }
                       
-                      # Download and install .NET 10 runtime
-                      Write-Host "Downloading .NET 10 runtime installer script..."
-                      try {
-                        Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "$env:TEMP\dotnet-install.ps1"
-                        Write-Host "Installing .NET 10 runtime..."
-                        & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Runtime dotnet -InstallDir "$env:ProgramFiles\dotnet" -NoPath
-                        
-                        Write-Host "? Runtime installation completed"
-                        Write-Host "Available runtimes:"
-                        dotnet --list-runtimes
-                      } catch {
-                        Write-Warning "? Could not install runtime: $_"
-                        Write-Host "Attempting to continue..."
-                        dotnet --list-runtimes
+                      # Install ASP.NET Core 10 Runtime (for Acceptance Tests)
+                      $aspnetInstalled = (dotnet --list-runtimes) -match "Microsoft.AspNetCore.App 10\.0\."
+                      if (-not $aspnetInstalled) {
+                        try {
+                          Write-Host "Installing ASP.NET Core 10 runtime..."
+                          & "$env:TEMP\dotnet-install.ps1" -Channel 10.0 -Runtime aspnetcore -InstallDir "$env:ProgramFiles\dotnet" -NoPath
+                          Write-Host "? ASP.NET Core runtime installation completed"
+                        } catch {
+                          Write-Warning "? Could not install ASP.NET Core runtime: $_"
+                        }
+                      } else {
+                        Write-Host "? ASP.NET Core 10 runtime already installed"
                       }
+                      
+                      Write-Host "Available runtimes:"
+                      dotnet --list-runtimes
                 - task: DownloadPackage@1
                   displayName: "Download Database Package"
                   inputs:
@@ -323,9 +335,14 @@ stages:
                   displayName: "Create database schema"
                   inputs:
                     pwsh: true
-                    targetType: filePath
-                    filePath: ./scripts/UpdateAzurePipelineSql.ps1
-                    arguments: -DatabaseServer "$(DatabaseServerUAT)" -DatabaseName "ChurchBulletin" -DatabaseAction "$(DatabaseAction)" -DatabaseUser "uat" -DatabasePassword "$(DatabasePassword)"
+                    targetType: "inline"
+                    script: |
+                      # Update database connection string for UAT
+                      $connectionString = "Server=$(DatabaseServerUAT);Database=ChurchBulletin;User Id=uat;Password=$(DatabasePassword);"
+                      [System.Environment]::SetEnvironmentVariable('DB_CONNECTION_STRING', $connectionString, [System.EnvironmentVariableTarget]::Process)
+
+                      # Run the database migration
+                      & "dotnet-ef" database update --context ApplicationDbContext --verbose
 
                 - task: AzureCLI@2
                   displayName: "Add revision to container app"
@@ -393,9 +410,14 @@ stages:
                   displayName: "Create database schema"
                   inputs:
                     pwsh: true
-                    targetType: filePath
-                    filePath: ./scripts/UpdateAzurePipelineSql.ps1
-                    arguments: -DatabaseServer "$(DatabaseServerPROD)" -DatabaseName "ChurchBulletin" -DatabaseAction "$(DatabaseAction)" -DatabaseUser "prod" -DatabasePassword "$(DatabasePassword)"
+                    targetType: "inline"
+                    script: |
+                      # Update database connection string for PROD
+                      $connectionString = "Server=$(DatabaseServerPROD);Database=ChurchBulletin;User Id=prod;Password=$(DatabasePassword);"
+                      [System.Environment]::SetEnvironmentVariable('DB_CONNECTION_STRING', $connectionString, [System.EnvironmentVariableTarget]::Process)
+
+                      # Run the database migration
+                      & "dotnet-ef" database update --context ApplicationDbContext --verbose
 
                 - task: AzureCLI@2
                   displayName: "Add revision to container app"
