Fix: Add PreserveCompilationContext for Coverlet .NET 10 compatibility
- Added <PreserveCompilationContext>true</PreserveCompilationContext> to test projects
- IntegrationTests.csproj: Enables Coverlet assembly resolution
- UnitTests.csproj: Consistent behavior across test projects

Problem:
- Coverlet 6.0.4 unable to instrument assemblies with .NET 10
- AssemblyResolutionException for Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions
- Code coverage collection incomplete

Solution:
- PreserveCompilationContext preserves compilation metadata
- Allows Coverlet to resolve .NET 10 dependencies
- Recommended fix from Coverlet documentation

Impact:
- Reduces/eliminates Coverlet instrumentation warnings
- Improves code coverage collection accuracy
- No impact on test execution (tests still pass)

Resolves: Coverlet assembly resolution warnings in GitHub Actions build-linux job

--- a/src/IntegrationTests/IntegrationTests.csproj
+++ b/src/IntegrationTests/IntegrationTests.csproj
@@ -6,6 +6,7 @@
 		<Nullable>enable</Nullable>
 
 		<IsPackable>false</IsPackable>
+		<PreserveCompilationContext>true</PreserveCompilationContext>
 
 		<AssemblyName>ClearMeasure.Bootcamp.$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>ClearMeasure.Bootcamp.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
