--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -87,7 +87,26 @@ jobs:
           path: '**/build/test/**/In/**/coverage.cobertura.xml'
           retention-days: 30
 
-  acceptance-tests-and-publish:
+      # Package Everything as NuGet Packages
+      - name: Package NuGet Packages
+        shell: pwsh
+        env:
+          BUILD_BUILDNUMBER: ${{ env.VERSION }}
+        run: |
+          . ./build.ps1
+          Package-Everything
+
+      # Upload packages as artifacts
+      - name: Upload NuGet Packages
+        uses: actions/upload-artifact@v4
+        if: success()
+        with:
+          name: nuget-packages-acceptance
+          path: build/*.nupkg
+          retention-days: 90
+
+
+  run-acceptance-tests:
     name: Acceptance Tests and Package
     runs-on: ubuntu-latest
     needs: [build-linux]
@@ -129,24 +148,6 @@ jobs:
           BUILD_BUILDNUMBER: ${{ env.VERSION }}
         run: |
           .\AcceptanceTests.ps1
-
-      # Package Everything
-      - name: Package NuGet Packages
-        shell: pwsh
-        env:
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-        run: |
-          . ./build.ps1
-          Package-Everything
-
-      # Upload packages as artifacts
-      - name: Upload NuGet Packages
-        uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: nuget-packages-acceptance
-          path: build/*.nupkg
-          retention-days: 90
 
       # Upload test results
       - name: Upload Test Results
